--- a/index.html
+++ b/index.html
@@ -4137,7 +4137,10 @@ document.addEventListener('DOMContentLoaded', async () => {
         `;
         updateBadge(0);
     }
-});============================== -->
+});
+</script>
+
+<!-- =============================== -->
 <script>
   // Fix 100vh issues on mobile browsers (Android + iOS)
   (function () {
